--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -77,7 +77,7 @@
     background-color: #ffffff;
     font-weight: bold;
     padding: 0 4px;
-    background-image: -moz-linear-gradient(center top , rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.6) 30%, rgba(255, 255, 255, 0.4) 30%, transparent);
+    background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.6) 30%, rgba(255, 255, 255, 0.4) 30%, transparent);
 }
 
 /*****************************************************************************************/
@@ -95,7 +95,6 @@
 .logRow-warningMessage,
 .logRow-loading,
 .logRow-errorMessage {
-    padding-left: 22px;
     background-repeat: no-repeat;
     background-position: 4px 2px;
 }
