Fix twisty icon (CSS)

--- a/extension/skin/classic/mac/panel.css
+++ b/extension/skin/classic/mac/panel.css
@@ -12,7 +12,7 @@ body {
 /* Twisties */
 
 .twisty,
-.logRow-errorMessage > .hasTwisty > .errorTitle,
+.logRow-errorMessage .hasTwisty > .errorTitle,
 .logRow-log .objectBox-array.hasTwisty,
 .logRow-spy .spyHead .spyTitle,
 .logGroup > .logRow,
@@ -28,7 +28,7 @@ body {
     background-position: 2px 3px;
 }
 
-.logRow-errorMessage > .hasTwisty.opened > .errorTitle,
+.logRow-errorMessage .hasTwisty.opened > .errorTitle,
 .logRow-log .objectBox-array.hasTwisty.opened,
 .logRow-spy.opened .spyHead .spyTitle,
 .logGroup.opened > .logRow,
