--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -679,7 +679,7 @@
 
 /*************************************************************************************************/
 
-.logRow-errorMessage > .hasTwisty > .errorTitle,
+.logRow-errorMessage .hasTwisty > .errorTitle,
 .logRow-spy .spyHead .spyTitle,
 .logGroup > .logRow {
     cursor: pointer;
@@ -688,11 +688,11 @@
     background-position: 3px 3px;
 }
 
-.logRow-errorMessage > .hasTwisty > .errorTitle {
+.logRow-errorMessage .hasTwisty > .errorTitle {
     background-position: 2px 3px;
 }
 
-.logRow-errorMessage > .hasTwisty > .errorTitle:hover,
+.logRow-errorMessage .hasTwisty > .errorTitle:hover,
 .logRow-spy .spyHead .spyTitle:hover,
 .logGroup > .logRow:hover {
     text-decoration: underline;
