Link CMD API to Firebug wiki (related to issue 5142)

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -425,7 +425,7 @@
     background-color: #EFEFEF;
 }
 
-.logRow-help .commandName {
+.logRow-help .commandName .objectLink {
     color: green;
     font-family: monospace;
 }
