--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -25,13 +25,13 @@
     list-style-image: url(chrome://firebug/skin/firebug16.png);
 }
 
-#menu_firebugInspect {
+#menu_firebug_firebugInspect {
     list-style-image: url(chrome://firebug/skin/inspect.png);
     -moz-image-region: rect(0, 16px, 16px, 0);
 }
 
-#menu_firebugInspect:hover,
-#menu_firebugInspect:active {
+#menu_firebug_firebugInspect:hover,
+#menu_firebug_firebugInspect:active {
     -moz-image-region: rect(16px, 16px, 32px, 0);
 }
 /*************************************************************************************************/
