--- a/trace/FBTrace/chrome/firebug/skin/classic/cookies/cookies.css
+++ b/trace/FBTrace/chrome/firebug/skin/classic/cookies/cookies.css
@@ -22,7 +22,7 @@
 .logRow-cookiesRejected,
 .logRow-cookie:hover {
     padding: 2px 0px 1px 22px !important;
-    background-image: url(cookie14.png) !important;
+    background-image: url(chrome://firebug/skin/cookies/cookie.svg) !important;
     background-repeat: no-repeat !important;
     background-position: 4px 2px !important;
 }
@@ -87,7 +87,7 @@
     border-bottom: 1px solid #9C9C9C;
     padding: 0 !important;
     font-weight: bold;
-    background: #BBBBBB url(tableHeader.gif) repeat-x;
+    background: #C8C8C8 -moz-linear-gradient(top, rgba(255, 255, 255, 0.3), rgba(0, 0, 0, 0.2)) repeat-x;
     white-space: nowrap;
 }
 
@@ -102,24 +102,24 @@
 }
 
 .cookieHeaderCell:hover:active {
-    background: #959595 url(tableHeaderActive.gif) repeat-x;
+    background-color: #B4B4B4;
 }
 
 .cookieHeaderSorted {
-    background: #7D93B2 url(tableHeaderSorted.gif) repeat-x;
+    background-color: #8CA0BE;
 }
 
 .cookieHeaderSorted > .cookieHeaderCellBox {
     border-right-color: #6B7C93;
-    background: url(arrowDown.png) no-repeat right;    
+    background: url(chrome://firebug/skin/arrowDown.png) no-repeat right;    
 }
 
 .cookieHeaderSorted.sortedAscending > .cookieHeaderCellBox {
-    background-image: url(arrowUp.png);
+    background-image: url(chrome://firebug/skin/arrowUp.png);
 }
 
 .cookieHeaderSorted:hover:active {
-    background: #536B90 url(tableHeaderSortedActive.gif) repeat-x;
+    background-color: #6E87AA;
 }
 
 /************************************************************************************************/
@@ -132,15 +132,26 @@
  * If a column is hidden, it's presented in a 'hiddenCols' attribute of the .cookieTable
  * element. Value of the attribute is a whitespace separated list of columns IDs.
  */
-.cookieTable[hiddenCols~=colName] TD[id="colName"], .cookieTable[hiddenCols~=colName] TD.cookieNameCol,
-.cookieTable[hiddenCols~=colValue] TD[id="colValue"], .cookieTable[hiddenCols~=colValue] TD.cookieValueCol,
-.cookieTable[hiddenCols~=colDomain] TD[id="colDomain"], .cookieTable[hiddenCols~=colDomain] TD.cookieDomainCol,
-.cookieTable[hiddenCols~=colSize] TD[id="colSize"], .cookieTable[hiddenCols~=colSize] TD.cookieSizeCol,
-.cookieTable[hiddenCols~=colPath] TD[id="colPath"], .cookieTable[hiddenCols~=colPath] TD.cookiePathCol,
-.cookieTable[hiddenCols~=colExpires] TD[id="colExpires"], .cookieTable[hiddenCols~=colExpires] TD.cookieExpiresCol,
-.cookieTable[hiddenCols~=colHttpOnly] TD[id="colHttpOnly"], .cookieTable[hiddenCols~=colHttpOnly] TD.cookieHttpOnlyCol,
-.cookieTable[hiddenCols~=colSecurity] TD[id="colSecurity"], .cookieTable[hiddenCols~=colSecurity] TD.cookieSecurityCol,
-.cookieTable[hiddenCols~=colStatus] TD[id="colStatus"], .cookieTable[hiddenCols~=colStatus] TD.cookieStatusCol {
+.cookieTable[hiddenCols~=colName] #colName,
+.cookieTable[hiddenCols~=colName] .cookieNameCol,
+.cookieTable[hiddenCols~=colValue] #colValue,
+.cookieTable[hiddenCols~=colValue] .cookieValueCol,
+.cookieTable[hiddenCols~=colRawValue] #colRawValue,
+.cookieTable[hiddenCols~=colRawValue] .cookieRawValueCol,
+.cookieTable[hiddenCols~=colDomain] #colDomain,
+.cookieTable[hiddenCols~=colDomain] .cookieDomainCol,
+.cookieTable[hiddenCols~=colSize] #colSize,
+.cookieTable[hiddenCols~=colSize] .cookieSizeCol,
+.cookieTable[hiddenCols~=colPath] #colPath,
+.cookieTable[hiddenCols~=colPath] .cookiePathCol,
+.cookieTable[hiddenCols~=colExpires] #colExpires,
+.cookieTable[hiddenCols~=colExpires] .cookieExpiresCol,
+.cookieTable[hiddenCols~=colHttpOnly] #colHttpOnly,
+.cookieTable[hiddenCols~=colHttpOnly] .cookieHttpOnlyCol,
+.cookieTable[hiddenCols~=colSecurity] #colSecurity,
+.cookieTable[hiddenCols~=colSecurity] .cookieSecurityCol,
+.cookieTable[hiddenCols~=colStatus] #colStatus,
+.cookieTable[hiddenCols~=colStatus] .cookieStatusCol {
     display: none;
 }
 
@@ -397,23 +408,13 @@
 
 /* Support for Net panel */
 .netInfoCookiesText {
-    padding: 0 !important;
-}
-
-.netInfoCookiesList {
-    padding: 5px 0 5px 20px;
-    margin: 0px; 
-}
-
-.netInfoCookiesGroup {
-    font-family: Lucida Grande, Tahoma, sans-serif;
-    font-weight: bold;
-    color: #565656;
-    list-style-type: disc;
+    padding-top: 0;
+    font-family: inherit;
 }
 
 .netInfoCookies {
-    margin: 5px 0 5px 0;
+    margin: 5px 0;
+    color: inherit;
 }
 
 .netInfoCookies > .cookieTable {
