--- a/trace/FBTrace/chrome/firebug/skin/classic/net.css
+++ b/trace/FBTrace/chrome/firebug/skin/classic/net.css
@@ -431,6 +431,10 @@
     color: gray;
 }
 
+.netInfoResponseHeadersBody .headerFromBFCache {
+    color: gray;
+}
+
 /************************************************************************************************/
 /* Time Info tip */
 
