Issue 5669: 	Improve style of Start button tooltip

--- a/extension/content/firebug/firefox/browserOverlay.css
+++ b/extension/content/firebug/firefox/browserOverlay.css
@@ -143,3 +143,34 @@
     max-width: 5px;
     background-color: -moz-dialog;
 }
+
+/*************************************************************************************************/
+/* Start Button Tooltip */
+
+.firebugButtonTooltip .version {
+    font-weight: bold;
+}
+
+.firebugButtonTooltip .alwaysOn {
+    color: gray;
+}
+
+.firebugButtonTooltip .enablement {
+    border-top: 1px gray dotted;
+    margin-top: 5px;
+    padding-top: 5px;
+    font-style: italic;
+}
+
+.firebugButtonTooltip .panelName,
+.firebugButtonTooltip .panelStatus {
+    color: gray;
+    margin-top: 0;
+    margin-bottom: 0;
+    min-width: 75px
+}
+
+.firebugButtonTooltip .panelStatus.on,
+.firebugButtonTooltip .panelName.on {
+    color: black;
+}
