Use firebug prefixed ID for the inspector toolbar button

--- a/extension/content/firebug/firefox/browserOverlay.css
+++ b/extension/content/firebug/firefox/browserOverlay.css
@@ -4,7 +4,7 @@
 /* Customizable Dialog Toolbar Buttons */
 
 /* Inspector button */
-#inspector-button {
+#firebug-inspectorButton {
     list-style-image: url(chrome://firebug/skin/inspect.png);
     -moz-image-region: rect(0, 16px, 16px, 0);
 }
