--- a/extension/skin/classic/panelbase.css
+++ b/extension/skin/classic/panelbase.css
@@ -228,7 +228,7 @@ code {
 .infoTipLoading {
     width: 16px;
     height: 16px;
-    background: url(chrome://firebug/skin/loading_16.gif) no-repeat;
+    background: url(chrome://firebug/skin/loading.svg) no-repeat;
 }
 
 .infoTipImageBox {
