Issue 5710 (Autocompletion gray color in Command Line (within the Console panel) is too light, not enough contrast) http://code.google.com/p/fbug/issues/detail?id=5710

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -110,7 +110,7 @@
 #fbCommandLineCompletion {
     position: absolute;
     z-index: 1;
-    color: silver;
+    color: #A0A0A0;
     bottom: 0;
 }
 
