Pointed to the new throbber image (now an SVG instead of a GIF)

--- a/tests/FBTest/skin/classic/testList.css
+++ b/tests/FBTest/skin/classic/testList.css
@@ -136,7 +136,7 @@
 }
 
 .testListRow.running .statusIcon {
-    background-image: url(chrome://firebug/skin/loading_16.gif);
+    background-image: url(chrome://firebug/skin/loading.svg);
     background-position: 10px 0px;
 }
 
