--- a/tests/FBTest/skin/classic/tabView.css
+++ b/tests/FBTest/skin/classic/tabView.css
@@ -12,7 +12,7 @@
 
 .tabViewCol {
     border-top: 1px solid #EEEEEE;
-    background: url(chrome://firebug/skin/group.gif) repeat-x #FFFFFF;
+    background: #FFFFFF -moz-linear-gradient(top, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1) 18px, transparent 51px) repeat-x;
     vertical-align:top;
     height:100%;
 }
