--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -639,7 +639,7 @@
     padding-left: 18px;
 }
 
-.logRow-log .objectBox-array > .arrayProperties {
+.logRow-log .objectBox-array > .arrayProperties:not(:empty) {
     padding-left: 18px;
 }
 
