Issue 5699:Troubles with search tooltip

--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -80,6 +80,7 @@
     -moz-border-image-slice: 16 50 24 12 fill;
     border-width: 16px 50px 24px 12px;
     border-style: solid;
+    border-color:red;
     color: #ffffff;
 }
 
@@ -91,7 +92,15 @@
 
 #fbSearchOptionsPanel > vbox {
     margin-right: -38px;
+    background: #424242;
 }
+
+#fbSearchOptionsPanel > description {
+    background: #424242;
+    margin: 0;
+}
+
+
 
 .fbsearch-options-label {
     color: #ffffff;
