--- a/extension/skin/classic/win/firebug.css
+++ b/extension/skin/classic/win/firebug.css
@@ -146,9 +146,11 @@
 
 #fbCommandHistory {
     min-width: 200px;
+    max-height: 800px;
     cursor: default;
     font-family: monospace;
     white-space: pre;
+    -moz-appearance: none;
 }
 
 .commandHistoryItem.selected {
