--- a/trace/FBTrace/chrome/firebug/content/firebug.css
+++ b/trace/FBTrace/chrome/firebug/content/firebug.css
@@ -344,14 +344,17 @@ panelTab > panelTabMenu .menuPopup:-moz-locale-dir(rtl) {
 }
 
 panelTab[breakOnNextArmed="true"] > .panelTab-text {
-    -moz-animation: armedBlinking 0.8s ease-out infinite alternate;
+    text-shadow: 1px 1px 2px darkGray, 0 0 1em orange, 0 0 0.2em orange !important;
+    /* -moz-animation: armedBlinking 0.8s ease-out infinite alternate; see issue 5618 */
 }
 
+/* see issue 5618
 panelTab.highlighted {
     text-shadow: 1px 1px 2px darkGray, 0px 0px 1em orange, 0px 0px 0.2em orange !important;
     -moz-transition-property: text-shadow;
     -moz-transition-duration: 0.8s;
 }
+*/
 
 panelTab[aria-disabled='true'] {
     color: graytext !important;
