--- a/trace/FBTrace/chrome/firebug/skin/classic/firebug.css
+++ b/trace/FBTrace/chrome/firebug/skin/classic/firebug.css
@@ -110,7 +110,7 @@
 #fbCommandLineCompletion {
     position: absolute;
     z-index: 1;
-    color: silver;
+    color: #A0A0A0;
     bottom: 0;
 }
 
