--- a/trace/FBTrace/chrome/firebug/skin/classic/mac/debugger.css
+++ b/trace/FBTrace/chrome/firebug/skin/classic/mac/debugger.css
@@ -156,6 +156,10 @@
     font-size: inherit;
 }
 
+.conditionInput.completionInput {
+    position: relative;
+}
+
 /* * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * */
 
 .upsideDown {
