--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -235,6 +235,13 @@
     font-family: Monaco, monospace;
 }
 
+/************************************************************************************************/
+/* Command History panel */
+
+#fbCommandHistory {
+    font-family: Monaco, monospace;
+}
+
 /********************************************************************************************/
 
 .panelTabBox {
