Make difference between 'event' and 'event-log' rep (related to issue 5803

--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -448,6 +448,7 @@
 /*************************************************************************************************/
 
 .objectLink-event,
+.objectLink-eventLog,
 .objectLink-regexp,
 .objectLink-Storage,
 .objectLink-object,
