fix transparent background of command history when using Linux

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -374,7 +374,7 @@ textbox[type="fbSearchBox"] > panel {
     cursor: default;
     font-family: monospace;
     white-space: pre;
-    -moz-appearance: none;
+    -moz-appearance: menupopup;
 }
 
 .commandHistoryItem.selected {
