Issue 5847: Style panel source links too far down
http://code.google.com/p/fbug/issues/detail?id=5847

--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -170,7 +170,7 @@
     text-align: right;
 }
 
-.cssRule .objectLink-sourceLink {
+.cssElementRuleContainer > .objectLink-sourceLink {
     top: 0;
 }
 
