--- a/extension/skin/classic/html.css
+++ b/extension/skin/classic/html.css
@@ -165,7 +165,11 @@
 .nodeBox.nodeHidden.selected > .nodeLabel > .nodeLabelBox,
 .nodeBox.nodeHidden.selected > .nodeLabel > .nodeLabelBox > .nodeTag,
 .nodeBox.nodeHidden.selected > .nodeLabel > .nodeLabelBox > .nodeAttr > .nodeValue,
-.nodeBox.nodeHidden.selected > .nodeLabel > .nodeLabelBox > .nodeText {
+.nodeBox.nodeHidden.selected > .nodeLabel > .nodeLabelBox > .nodeText,
+.nodeBox.nodeHidden .nodeBox.selected > .nodeLabel > .nodeLabelBox,
+.nodeBox.nodeHidden .nodeBox.selected > .nodeLabel > .nodeLabelBox > .nodeTag,
+.nodeBox.nodeHidden .nodeBox.selected > .nodeLabel > .nodeLabelBox > .nodeAttr > .nodeValue,
+.nodeBox.nodeHidden .nodeBox.selected > .nodeLabel > .nodeLabelBox > .nodeText {
     color: SkyBlue !important;
 }
 
