Issue 5866: 	Show stack trace for function calls log

--- a/extension/skin/classic/callstack.css
+++ b/extension/skin/classic/callstack.css
@@ -69,3 +69,11 @@
     display: none;
 }
 
+/*************************************************************************************************/
+/* FunctionCall log */
+
+.objectBox-functionCall {
+    padding-left: 17px;
+    cursor: default;
+    position: relative;
+}
