--- a/extension/skin/classic/panel.css
+++ b/extension/skin/classic/panel.css
@@ -9,6 +9,7 @@
 @import "chrome://firebug/skin/html.css";
 @import "chrome://firebug/skin/css.css";
 @import "chrome://firebug/skin/debugger.css";
+@import "chrome://firebug/skin/scriptPanel.css";
 @import "chrome://firebug/skin/balloonNote.css";
 @import "chrome://firebug/skin/callstack.css";
 @import "chrome://firebug/skin/layout.css";
