--- a/extension/skin/classic/scriptPanel.css
+++ b/extension/skin/classic/scriptPanel.css
@@ -1,9 +1,7 @@
 /* See license.txt for terms of usage */
 
-/************************************************************************************************/
+/*************************************************************************************************/
 
 .panelNode-jsd2script {
     overflow: hidden;
 }
-
-/************************************************************************************************/
