--- a/extension/skin/classic/orion-firebug.css
+++ b/extension/skin/classic/orion-firebug.css
@@ -1,21 +1,23 @@
 /* See license.txt for terms of usage */
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* The Default Mozilla Orion Theme */
 
 /* From some reason, importing the default theme this way causes issue 5488 */
 @import "chrome://browser/skin/devtools/orion.css";
 
-/************************************************************************************************/
+/*************************************************************************************************/
 /* Custom Styles for Command Editor (Orion) */
 
 .viewContainer {
+    font-size: 11px; /* testing */
     /*font-size: 11px; see issue 5488*/
     background-color: rgb(238, 238, 238) !important;
 }
 
 .view {
     background: white !important;
+    padding-left: 10px !important;
 }
 
 .token_string {
@@ -31,9 +33,15 @@
     background-color: rgb(238, 238, 238) !important;
 }
 
+.ruler.lines {
+    padding-left: 8px !important;
+    padding-right: 8px !important;
+}
+
 /*************************************************************************************************/
 /* Breakpoints */
 
 .annotationHTML.breakpoint {
     background-image: url(chrome://firebug/skin/breakpoint.png);
+    background-position:top !important;
 }
