Properly set script current location if clickin on a stack frame in the Callstack Panel

--- a/extension/skin/classic/orion-firebug.css
+++ b/extension/skin/classic/orion-firebug.css
@@ -74,3 +74,14 @@
     padding-left: 10px;
     background-color: lightgoldenrodyellow;
 }
+
+/*************************************************************************************************/
+/* Caret Location */
+
+.annotationLine.currentLine {
+    background-color: transparent !important;
+}
+
+.annotationLine.currentLine.debugLocation {
+    background-color: lightgoldenrodyellow !important;
+}
