Created separate automated test case templates

--- a/tests/templates/automated/issueXXXXSeveralCases.html
+++ b/tests/templates/automated/issueXXXXSeveralCases.html
@@ -2,16 +2,14 @@
 <html>
     <!--
         STEPS TO CREATE A TEST CASE:
-        1. Replace "xxxx" by number of your issue
-        2. Replace "Issue summary" by title of your issue
-        3. Put inspectable elements, form fields etc. into the "content" section
-        4. Add the exact steps to reproduce your issue under "Steps to reproduce"
-        5. Describe the currently seen result under "Observed result"
-        6. Describe what you would expect to see under "Expected result"
+        1. Replace "xxxx" by number of the issue
+        2. Replace "Issue summary" by title of the issue
+        3. Adjust the relative path to the testcase.css if needed
+        4. Put inspectable elements, form fields etc. into the "content" section
+        5. Add the exact steps to reproduce the test case under "Steps to reproduce"
+        6. Describe what is expected to see under "Expected result"
         7. Add your contact information
         8. Remove all template comments
-
-        Note: Make sure, the URL to testcase.css is https://getfirebug.com/tests/content/templates/default/testcase.css
      -->
     <head>
         <!--
@@ -19,7 +17,7 @@
          -->
         <title>Issue xxxx: Issue summary</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <link href="https://getfirebug.com/tests/head/_common/testcase.css" type="text/css" rel="stylesheet"/>
+        <link href=../../_common/testcase.css" type="text/css" rel="stylesheet"/>
     </head>
     <body>
         <header>
@@ -76,7 +74,7 @@
             <footer>
                 <!--
                     Your name and your email address (or other contact information) should be placed here.
-                    This is important in the case we need to contact you for further reference. 
+                    This is important in the case we need to contact you for further reference.
                  -->
                 &lt;Author name&gt;, &lt;email address&gt;
             </footer>
