--- a/tests/templates/default/issueXXXXSeveralCases.html
+++ b/tests/templates/default/issueXXXXSeveralCases.html
@@ -29,27 +29,56 @@
             <section id="content">
                 <!--
                     All inspectable elements, form fields etc. needed to execute the test should be placed here.
-                    If you generate output via JavaScript, put it into <section id="output"></section>.
+                    If you generate output via JavaScript, put it into the "output" section.
                     If you don't need any content, you can remove the "content" section.
                  -->
+                <input type="text">
+                <button>execute</button>
+                <section id="output">
+                </section>
             </section>
             <section id="description">
                 <!--
                     The steps to reproduce the test case should be described here in detail.
+                    If you just have one test case, you can leave out the <h2> headline.
+                    If you want to give further information about this test case, please put 
+                    it should be put inside a <p> paragraph preceding the steps to reproduce 
+                    the test case.
                  -->
+                <p>Additional information</p>
+                <h2>Case 1</h2>
                 <h3>Steps to reproduce</h3>
                 <ol>
                     <li>Step 1</li>
                     <li>Step 2</li>
                     <li>Step 3</li>
                 </ol>
-                <h3>Observed result</h3>
+                <h3>Observed Result</h3>
                 <ul>
                     <li>Point 1</li>
                     <li>Point 2</li>
                     <li>Point 3</li>
                 </ul>
-                <h3>Expected result</h3>
+                <h3>Expected Result</h3>
+                <ul>
+                    <li>Point 1</li>
+                    <li>Point 2</li>
+                    <li>Point 3</li>
+                </ul>
+                <h2>Case 2</h2>
+                <h3>Steps to reproduce</h3>
+                <ol>
+                    <li>Step 1</li>
+                    <li>Step 2</li>
+                    <li>Step 3</li>
+                </ol>
+                <h3>Observed Result</h3>
+                <ul>
+                    <li>Point 1</li>
+                    <li>Point 2</li>
+                    <li>Point 3</li>
+                </ul>
+                <h3>Expected Result</h3>
                 <ul>
                     <li>Point 1</li>
                     <li>Point 2</li>
@@ -59,7 +88,7 @@
             <footer>
                 <!--
                     Your name and your email address (or other contact information) should be placed here.
-                    This is important in the case we need to contact you for further reference. 
+                    This is important in the case we need to contact you for further reference.
                  -->
                 &lt;Author name&gt;, &lt;email address&gt;
             </footer>
