--- a/extension/skin/classic/console.css
+++ b/extension/skin/classic/console.css
@@ -11,6 +11,7 @@
 
 .logRow {
     display: table;
+    position: relative;
     width: 100%;
     border-bottom: 1px solid #D7D7D7;
     background-color: #FFFFFF;
@@ -50,6 +51,10 @@
 .logContent {
     display: table-cell;
     padding: 2px 0 2px 4px;
+}
+
+.logContent:empty {
+    display: none;
 }
 
 .logCounter {
