Issue 5999: Open the completion popup at the start of the expression
http://code.google.com/p/fbug/issues/detail?id=5999

--- a/extension/skin/classic/firebug.css
+++ b/extension/skin/classic/firebug.css
@@ -87,6 +87,16 @@
     z-index: 3;
 }
 
+#fbCommandLineMeasurer {
+    margin: 0;
+    padding: 0;
+    border: none;
+    position: absolute;
+    z-index: -1;
+    visibility: hidden;
+    width: auto;
+}
+
 #fbCommandEditor {
     margin: 0;
     font-family: monospace;
