--- a/extension/skin/classic/mac/firebug.css
+++ b/extension/skin/classic/mac/firebug.css
@@ -17,6 +17,7 @@
 #fbCommandLine,
 #fbCommandEditor,
 #fbCommandLineCompletion,
+#fbCommandLineMeasurer,
 .fbCommandLineCompletions {
     font-family: Monaco, monospace;
 }
