Fixed copying selected CSS to clipboard (missing part)

--- a/extension/skin/classic/css.css
+++ b/extension/skin/classic/css.css
@@ -44,6 +44,15 @@
     color: darkgreen;
 }
 
+.cssPropValue > .alterText {
+    font-size: 0;
+}
+
+.cssPropValue > .alterText::after {
+    content: '...';
+    font-size: 11px;
+}
+
 .cssPropValue,
 .cssFontPropValue {
     color: darkblue;
